añadiendo la carpeta demo y haciendo mejoras

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1 id="midi-name"></h1>
-    <script src="https://zsh4k.github.io/midi-name/midi-name.js"></script>
+    <script src="/midi-name.js"></script>
 </body>
 </html>
